added also cve csp-vulnerability bot for to the intelmq runtime

--- a/deployment/docker/applications/intelmq/csp-config/pipeline.conf
+++ b/deployment/docker/applications/intelmq/csp-config/pipeline.conf
@@ -1,13 +1,29 @@
 {
-    "csp-rest-api-output": {
-        "source-queue": "csp-rest-api-output-queue"
+    "csp-cve-api-last-collector": {
+        "destination-queues": [
+            "csp-cve-parser-queue"
+        ]
+    },
+    "csp-cve-deduplicator-expert": {
+        "source-queue": "csp-cve-deduplicator-expert-queue",
+        "destination-queues": [
+            "csp-rest-api-output-queue"
+        ]
+    },
+    "csp-cve-parser": {
+        "source-queue": "csp-cve-parser-queue",
+        "destination-queues": [
+            "csp-cve-deduplicator-expert-queue"
+        ]
     },
     "csp-file-collector": {
         "destination-queues": [
             "csp-rest-api-output-queue"
         ]
     },
-    
+    "csp-rest-api-output": {
+        "source-queue": "csp-rest-api-output-queue"
+    },
     "cymru-whois-expert": {
         "source-queue": "cymru-whois-expert-queue",
         "destination-queues": [
@@ -59,5 +75,4 @@
             "gethostbyname-2-expert-queue"
         ]
     }
-
 }
