--- a/deployment/docker/applications/intelmq/csp-config/runtime.conf
+++ b/deployment/docker/applications/intelmq/csp-config/runtime.conf
@@ -11,7 +11,9 @@
             "hierarchical_output": false,
             "host": "http://csp-intelmq_adapter:8081/intelmq/v1/emitter",
             "use_json": true
-        }
+        },
+        "enabled": true,
+        "run_mode": "continuous"
     },
     "csp-file-collector": {
         "description": "CSP Fileinput collector fetches data from a file.",
@@ -26,10 +28,11 @@
             "path": "/tmp/intelmq-fileinput",
             "postfix": ".json",
             "provider": "",
-            "rate_limit": 100
-        }
+            "rate_limit": 3600
+        },
+        "enabled": true,
+        "run_mode": "continuous"
     },
-    
     "cymru-whois-expert": {
         "description": "Cymry Whois (IP to ASN) is the bot responsible to add network information to the events (BGP, ASN, AS Name, Country, etc..).",
         "group": "Expert",
@@ -37,11 +40,13 @@
         "name": "Cymru Whois",
         "parameters": {
             "redis_cache_db": 5,
-            "redis_cache_host": "127.0.0.1",
+            "redis_cache_host": "csp-redis",
             "redis_cache_password": null,
             "redis_cache_port": 6379,
             "redis_cache_ttl": 86400
-        }
+        },
+        "enabled": true,
+        "run_mode": "continuous"
     },
     "deduplicator-expert": {
         "description": "Deduplicator is the bot responsible for detection and removal of duplicate messages. Messages get cached for <redis_cache_ttl> seconds. If found in the cache, it is assumed to be a duplicate.",
@@ -52,11 +57,13 @@
             "filter_keys": "raw,time.observation",
             "filter_type": "blacklist",
             "redis_cache_db": 6,
-            "redis_cache_host": "127.0.0.1",
+            "redis_cache_host": "csp-redis",
             "redis_cache_password": null,
             "redis_cache_port": 6379,
             "redis_cache_ttl": 86400
-        }
+        },
+        "enabled": true,
+        "run_mode": "continuous"
     },
     "file-output": {
         "description": "File is the bot responsible to send events to a file.",
@@ -65,22 +72,29 @@
         "name": "File",
         "parameters": {
             "file": "/tmp/intelmq-fileoutput/events.txt",
-            "hierarchical_output": false
-        }
+            "hierarchical_output": false,
+            "single_key": null
+        },
+        "enabled": true,
+        "run_mode": "continuous"
     },
     "gethostbyname-1-expert": {
         "description": "fqdn2ip is the bot responsible to parsing the ip from the fqdn.",
         "group": "Expert",
         "module": "intelmq.bots.experts.gethostbyname.expert",
         "name": "Gethostbyname",
-        "parameters": {}
+        "parameters": {},
+        "enabled": true,
+        "run_mode": "continuous"
     },
     "gethostbyname-2-expert": {
         "description": "fqdn2ip is the bot responsible to parsing the ip from the fqdn.",
         "group": "Expert",
         "module": "intelmq.bots.experts.gethostbyname.expert",
         "name": "Gethostbyname",
-        "parameters": {}
+        "parameters": {},
+        "enabled": true,
+        "run_mode": "continuous"
     },
     "spamhaus-drop-collector": {
         "description": "",
@@ -95,21 +109,27 @@
             "provider": "Spamhaus",
             "rate_limit": 3600,
             "ssl_client_certificate": null
-        }
+        },
+        "enabled": true,
+        "run_mode": "continuous"
     },
     "spamhaus-drop-parser": {
         "description": "Spamhaus Drop Parser is the bot responsible to parse the DROP, EDROP, DROPv6, and ASN-DROP reports and sanitize the information.",
         "group": "Parser",
         "module": "intelmq.bots.parsers.spamhaus.parser_drop",
         "name": "Spamhaus Drop",
-        "parameters": {}
+        "parameters": {},
+        "enabled": true,
+        "run_mode": "continuous"
     },
     "taxonomy-expert": {
         "description": "Taxonomy is the bot responsible to apply the eCSIRT Taxonomy to all events.",
         "group": "Expert",
         "module": "intelmq.bots.experts.taxonomy.expert",
         "name": "Taxonomy",
-        "parameters": {}
+        "parameters": {},
+        "enabled": true,
+        "run_mode": "continuous"
     },
     "url2fqdn-expert": {
         "description": "url2fqdn is the bot responsible to parsing the fqdn from the url.",
@@ -119,7 +139,53 @@
         "parameters": {
             "load_balance": true,
             "overwrite": false
-        }
+        },
+        "enabled": true,
+        "run_mode": "continuous"
+    },
+    "csp-cve-api-last-collector": {
+        "parameters": {
+            "feed": "",
+            "provider": "",
+            "http_url": "https://cve.circl.lu/api/last/",
+            "http_url_formatting": false,
+            "http_username": null,
+            "http_password": null,
+            "ssl_client_certificate": null,
+            "extract_file": "True or string of file names separated by ,",
+            "rate_limit": 3600
+        },
+        "name": "Generic URL Fetcher",
+        "group": "Collector",
+        "module": "intelmq.bots.collectors.http.collector_http",
+        "description": "Generic CVE URL Fetcher is the bot responsible to get the report from an cve last api.",
+        "enabled": true,
+        "run_mode": "continuous"
+    },
+    "csp-cve-parser": {
+        "parameters": {},
+        "name": "CVE server",
+        "group": "Parser",
+        "module": "intelmq.bots.parsers.cve.parser_cve_server",
+        "description": "CVE server Parser is the bot responsible to parse the report and sanitize the information in MISP event format",
+        "enabled": true,
+        "run_mode": "continuous"
+    },
+    "csp-cve-deduplicator-expert": {
+        "parameters": {
+            "filter_keys": "raw,time.observation,destination.as_name",
+            "filter_type": "blacklist",
+            "redis_cache_db": 6,
+            "redis_cache_host": "redis",
+            "redis_cache_port": 6379,
+            "redis_cache_password": null,
+            "redis_cache_ttl": 86400
+        },
+        "name": "Deduplicator",
+        "group": "Expert",
+        "module": "intelmq.bots.experts.deduplicator.expert",
+        "description": "Deduplicator is the bot responsible for detection and removal of duplicate messages. Messages get cached for <redis_cache_ttl> seconds. If found in the cache, it is assumed to be a duplicate.",
+        "enabled": true,
+        "run_mode": "continuous"
     }
-
 }
