--- a/deployment/docker/applications/intelmq/positions.conf
+++ b/deployment/docker/applications/intelmq/positions.conf
@@ -1,46 +1,58 @@
 {
+    "csp-cve-api-last-collector": {
+        "x": -445,
+        "y": -287
+    },
+    "csp-cve-deduplicator-expert": {
+        "x": -63,
+        "y": -374
+    },
+    "csp-cve-parser": {
+        "x": -244,
+        "y": -288
+    },
+    "csp-file-collector": {
+        "x": 256,
+        "y": -620
+    },
     "csp-rest-api-output": {
-        "x": 239,
-        "y": -231
+        "x": 105,
+        "y": -487
     },
     "cymru-whois-expert": {
-        "x": -257,
-        "y": 411
+        "x": 475,
+        "y": 126
     },
     "deduplicator-expert": {
-        "x": -90,
-        "y": -313
-    },
-    "file-collector": {
-        "x": 238,
-        "y": 3
+        "x": -299,
+        "y": 381
     },
     "file-output": {
-        "x": -455,
-        "y": 445
+        "x": 675,
+        "y": 74
     },
     "gethostbyname-1-expert": {
-        "x": -283,
-        "y": 212
+        "x": 271,
+        "y": 104
     },
     "gethostbyname-2-expert": {
-        "x": -98,
-        "y": 288
+        "x": 354,
+        "y": 291
     },
     "spamhaus-drop-collector": {
-        "x": -362,
-        "y": -548
+        "x": -722,
+        "y": 311
     },
     "spamhaus-drop-parser": {
-        "x": -168,
-        "y": -499
+        "x": -520,
+        "y": 370
     },
     "taxonomy-expert": {
-        "x": -85,
-        "y": -111
+        "x": -74,
+        "y": 340
     },
     "url2fqdn-expert": {
-        "x": -124,
-        "y": 88
+        "x": 143,
+        "y": 271
     }
 }
