--- a/csp-apps/configuration/conf-client-cspapp/pom.xml
+++ b/csp-apps/configuration/conf-client-cspapp/pom.xml
@@ -208,7 +208,7 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-compress</artifactId>
-			<version>1.18</version>
+			<version>[1.19,)</version>
 		</dependency>
 
 		<!-- for touch() -->
