--- a/csp-apps/configuration/conf-client-cspapp/pom.xml
+++ b/csp-apps/configuration/conf-client-cspapp/pom.xml
@@ -134,7 +134,7 @@
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>bootstrap-table</artifactId>
-            <version>1.9.1-1</version>
+            <version>1.16.0</version>
         </dependency>
 		<!-- https://mvnrepository.com/artifact/org.webjars/font-awesome -->
 		<dependency>
